[package]
name    = "egui_cross_platform"
version = "0.1.0"
edition = "2024"


[dependencies]
eframe  = "0.34.1"
egui    = "0.34.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image   = "0.25.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures     = "0.4.58"
web-sys                  = "0.3.85"
console_error_panic_hook = "0.1.7"